# cloudracer

./: Cargo.toml  README.md  cloudracer.yml  pyproject.toml
.github/workflows/: ci.yaml
playground/: Playground.sln
playground/Playground.AppHost/: Playground.AppHost.csproj  Program.cs  deployment-manifest.json
playground/Playground.AppHost/Properties/: launchSettings.json
playground/Playground.Frontend/: Dockerfile  package.json
playground/Playground.WebApi/Properties/: launchSettings.json
src/: cli.rs  config.rs  containers.rs  error.rs  lib.rs  main.rs  manifest.rs
src/cloudracer/: __init__.py
tests/: integration_test.rs
