[package]
name = "cloudracer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
