[project]
name = "cloudracer"
version = "0.1.0"
description = "Generate build and deployment script for .NET aspire projects on Azure Container Apps"
authors = [{ name = "Willem Meints", email = "willem.meints@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/projects"]
