[project]
name = "cloudracer"
description = "Generate build and deployment script for .NET aspire projects on Azure Container Apps"
dynamic = ["version"]
authors = [{ name = "Willem Meints", email = "willem.meints@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cloudracer/__about__.py"

[tool.rye]
managed = true
dev-dependencies = ["hatch>=1.12.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/projects"]
